...
  var numOfHeaders = 0
  // Define other headers dynamically
  val additionalHeaders =
      listOf<@Composable () -> Unit>(
          { Spacer(modifier = Modifier.height(32.dp)) },
          {
            CameraFeedbackButton(
                onClick = { navigationActions.navigateTo(Screen.PRACTICE) },
                modifier =
                    Modifier.onGloballyPositioned { coords ->
                      saveElementPosition("CameraFeedbackButton", coords, density, elementPositions)
                    })
          },
...
  // Calculate headers dynamically
  numOfHeaders = calculateNumOfHeadersOfTopBarButtons(topBarButtons, additionalHeaders)

  MainScreenScaffold(
      navigationActions = navigationActions,
      topLevelDestination = TopLevelDestinations.HOME,
      testTag = "HomeScreen",
      helpText =
          HelpText(
              title = stringResource(R.string.home_text),
              content = stringResource(R.string.help_home_screen_text)),
      topBarButtons = topBarButtons,
      floatingActionButton = {
        FloatingActionButton(
            onClick = { coroutineScope.launch { scrollState.animateScrollToItem(0) } },
            containerColor = MaterialTheme.colorScheme.primary,
            contentColor = MaterialTheme.colorScheme.onPrimary,
            modifier = Modifier.testTag("ScrollToTopButton")) {
              Icon(Icons.Default.KeyboardArrowUp, contentDescription = "Scroll to Top")
            }
      },
      content = {
        LazyColumn(state = scrollState, modifier = Modifier.weight(1f)) {
          additionalHeaders.forEach { composable -> item { composable() } }
...
