...
  val paintColor = MaterialTheme.colorScheme.background
  AnnexScreenScaffold(navigationActions = navigationActions, testTag = "ASLRecognitionScreen") {
    Spacer(modifier = Modifier.height(32.dp))
    Box(
        modifier =
            Modifier.fillMaxWidth().weight(1f).background(MaterialTheme.colorScheme.background)) {
          CameraBox(handLandmarkViewModel, "cameraPreview")
        }

    Spacer(modifier = Modifier.height(16.dp))

    LetterDictionary(
        coroutineScope = coroutineScope, numbOfHeaders = integerResource(R.integer.scroll_offset))
...
        contentAlignment = Alignment.Center) {
          Column(
              modifier = Modifier.fillMaxSize().padding(16.dp),
              horizontalAlignment = Alignment.CenterHorizontally) {
                // Draws the output text or the prompt to "Make a sign" on the screen.
                HandGestureOverlay(
                    modifier = Modifier.fillMaxSize().weight(1f).testTag("gestureOverlayView"),
                    displayText = displayText,
                    paintColor = paintColor)
                // Displays the image associated with the detected ASL hand gesture
                Icon(
                    painter = painterResource(id = imageResource),
                    contentDescription = "Letter gesture",
...
