package com.github.se.signify.ui.screens.auth

/**
 * This file contains the implementation of the `LoginScreen` and related composable functions for
 * handling the user login process in the application. It includes:
 * - UI components for login and offline mode.
 * - Integration with Google Authentication via a deprecated API.
 * - Mock authentication support for testing environments.
 */
import android.content.Intent
...
 *
 * @param onOfflineClick Callback to handle offline mode selection.
 */
@Composable
fun SkipLoginButton(onOfflineClick: () -> Unit) {
  Button(
      modifier = Modifier.padding(8.dp).height(48.dp).testTag("skipLoginButton"),
      onClick = onOfflineClick,
      colors = ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.background),
      shape = RoundedCornerShape(50),
      border = BorderStroke(1.dp, MaterialTheme.colorScheme.background)) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
...
