...
  ) {
    Column {
      BasicButton(
          onClick = { galleryLauncher.launch("image/*") },
          iconTestTag = "editProfilePictureButtonIcon",
          contentDescription = "Edit Profile Picture",
          modifier = Modifier.testTag("editProfilePictureButton"),
          icon = Icons.Outlined.Edit,
          tint = MaterialTheme.colorScheme.onBackground,
      )

      Spacer(modifier = Modifier.height(16.dp))

      if (isDeleteEnabled()) {
        BasicButton(
            onClick = { showDeleteDialog.value = true },
            iconTestTag = "deleteProfilePictureButtonIcon",
            contentDescription = "Delete Profile Picture",
            modifier = Modifier.testTag("deleteProfilePictureButton"),
            icon = Icons.Outlined.Delete,
            tint = MaterialTheme.colorScheme.onBackground,
        )
      }
    }

    Spacer(modifier = Modifier.width(8.dp))

    ProfilePicture(selectedUri?.toString())

    ConfirmationDialog(
        showDeleteDialog,
        onConfirm = {
          selectedUri = null
          userViewModel.updateProfilePictureUrl(null)
...
        horizontalArrangement = Arrangement.Center) {
          val focusRequester = remember { FocusRequester() }

          BasicButton(
              onClick = { focusRequester.requestFocus() },
              iconTestTag = "editUsernameButtonIcon",
              contentDescription = "Edit Username",
              modifier = Modifier.testTag("editUsernameButton"),
              icon = Icons.Outlined.Edit,
              tint = MaterialTheme.colorScheme.onBackground)

          Spacer(modifier = Modifier.width(8.dp))

...
                      .onFocusChanged { focusState ->
                        if (!focusState.isFocused && newName != userName && newName.isNotEmpty()) {
                          showConfirmationDialog.value = true
                        }
                      }
                      .focusRequester(focusRequester)
                      .testTag("usernameTextField"),
              colors =
                  TextFieldDefaults.colors(
                      focusedContainerColor = MaterialTheme.colorScheme.background,
                      unfocusedContainerColor = MaterialTheme.colorScheme.background,
                      focusedTextColor = MaterialTheme.colorScheme.onBackground,
                      cursorColor = MaterialTheme.colorScheme.onBackground),
...
          Surface(
              shape = RoundedCornerShape(16.dp),
              color = MaterialTheme.colorScheme.surface,
              modifier =
                  Modifier.widthIn(min = 280.dp, max = 400.dp) // Set the dialog width
                      .padding(top = 150.dp)
                      .testTag("confirmationPopup")) {
                Column(
                    modifier = Modifier.fillMaxWidth().padding(16.dp),
                    horizontalAlignment = Alignment.CenterHorizontally) {
                      // Dialog Title
                      Text(
                          text = title,
...
                          modifier = Modifier.fillMaxWidth()) {
                            val confirmText = stringResource(R.string.confirm)
                            val cancelText = stringResource(R.string.cancel)

                            // Confirm Button
                            Button(
                                modifier = Modifier.testTag("confirmationPopupConfirm"),
                                onClick = {
                                  onConfirm()
                                  showDialog.value = false // Close the dialog
                                },
                                colors = ButtonDefaults.buttonColors(containerColor = confirmColor),
                            ) {
                              Text(confirmText)
                            }

                            // Cancel Button
                            Button(
                                modifier = Modifier.testTag("confirmationPopupCancel"),
                                onClick = {
                                  onDismiss()
                                  showDialog.value = false // Close the dialog
                                },
                                colors =
                                    ButtonDefaults.buttonColors(
...
  var expanded by remember { mutableStateOf(false) }
  var selectedLanguage by remember { mutableStateOf(if (isFrench) "FR" else "EN") }

  Column {
    Row(
        modifier =
            Modifier.testTag("LanguageRow")
                .fillMaxWidth()
                .clickable { expanded = !expanded }
                .padding(vertical = 8.dp),
        horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text = selectedLanguage,
...

  // Logout Button UI
  BasicButton(
      onClick = { showLogoutDialog.value = true }, // Show confirmation dialog on click
      iconTestTag = "logoutButtonIcon",
      contentDescription = "Logout",
      modifier = Modifier.testTag("logoutButton"),
      icon = Icons.AutoMirrored.Outlined.ExitToApp,
      tint = MaterialTheme.colorScheme.error,
  )

  // Confirmation Dialog for Logout
  ConfirmationDialog(
...
